adding reporting configuration